--- a/dailyreport.html
+++ b/dailyreport.html
@@ -181,8 +181,8 @@
 		</div>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
-	<!-- <script src="https://cdn.rawgit.com/unconditional/jquery-table2excel/master/src/jquery.table2excel.js" type="text/javascript"></script> -->
-	<script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.9.9/tableExport.min.js" type="text/javascript"></script>
+	<script src="https://houzhenni.github.io/mylib/table2excel.js" type="text/javascript"></script>
+	<script src="https://houzhenni.github.io/mylib/tableExport.js" type="text/javascript"></script>
 	<!-- <script src="https://cdn.bootcss.com/FileSaver.js/2014-11-29/FileSaver.min.js"></script> -->
 	<script>
 		//定义星期几
@@ -283,7 +283,7 @@
 				// if(!$("#queryDetail").val().match(/^[\u4e00-\u9fa5_a-zA-Z0-9]+$/)){
 				// 	// val05 = "问题描述格式不正确\n";
 				// }
-				if(!$("#qaNum").val().match(/^[\u4e00-\u9fa5_a-zA-Z0-9]+$/)){
+				if(!$("#qaNum").val().match(/^[\u4e00-\u9fa5_a-zA-Z0-9\s]+$/)){
 					val06 = "教学编号不正确\n";
 				}
 				if($("#solvedOrNot").val() != "是" && $("#solvedOrNot").val() != "否"){
