--- a/resume.html
+++ b/resume.html
@@ -116,7 +116,7 @@ body{min-width: 320px;}
 									<p>Customer support for IT company, with passion to learn various programming languages</p>
 									<hr style="border-top-color: black;"/>
 									<p>
-										Front-end developer
+										Customer Support
 										<br/>
 										Chi/Jap/Eng Translator
 									</p>
