change link direction

--- a/index.html
+++ b/index.html
@@ -80,22 +80,22 @@
                </header>
                <ul>
 				  <li>
-				    <p><a href="https://www.houzhenni.com/myapp/resume.html">我的简历</a></p>
+				    <p><a href="https://www.houzhenni.com/myapp/resume.html" target="_blank">我的简历</a></p>
 				  </li>
 				  <li>
-				    <p><a href="https://www.houzhenni.com/myapp/dailyreport.html">一个用来生成表格的小试验</a></p>
+				    <p><a href="https://www.houzhenni.com/myapp/dailyreport.html" target="_blank">一个用来生成表格的小试验</a></p>
 				  </li>
 				  <li>
-				    <p><a href="https://www.houzhenni.com/myapp/minesweeper.html">扫个雷玩玩吧</a></p>
+				    <p><a href="https://www.houzhenni.com/myapp/minesweeper.html" target="_blank">扫个雷玩玩吧</a></p>
 				  </li>
 				  <li>
-				    <p><a href="https://www.houzhenni.com/myapp/converttohtml.html">纯文字转HTML的小工具</a></p>
+				    <p><a href="https://www.houzhenni.com/myapp/converttohtml.html" target="_blank">纯文字转HTML的小工具</a></p>
 				  </li>
 				  <li>
-				    <p><a href="https://www.houzhenni.com/myapp/randomquote.html">随机生成名人名言的网页</a></p>
+				    <p><a href="https://www.houzhenni.com/myapp/randomquote.html" target="_blank">随机生成名人名言的网页</a></p>
 				  </li>
 				  <li>
-				    <p><a href="https://www.houzhenni.com/myapp/calculator.html">JavaScript计算器</a></p>
+				    <p><a href="https://www.houzhenni.com/myapp/calculator.html" target="_blank">JavaScript计算器</a></p>
 				  </li>
 				</ul>
             </article>
