--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 			   <p><a href="https://www.houzhenni.com/myapp/converttohtml.html" target="_blank">纯文字转HTML的小工具</a></p>
 			   <p><a href="https://www.houzhenni.com/myapp/randomquote.html" target="_blank">随机生成名人名言的网页</a></p>
 			   <p><a href="https://www.houzhenni.com/myapp/calculator.html" target="_blank">JavaScript计算器</a></p>
+			   <p><a href="https://www.houzhenni.com/myapp/wikipage.html" target="_blank">Wikipedia搜索页</a></p>
             </article>
             <aside class="comments related" role="complementary">
                <h2 class="hr">所有评论</h2>
