--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,13 @@
 
 <style>
 body{min-width: 320px;}
+.thumbnail{
+	transition: transform 0.5s;
+}
+.thumbnail:hover{
+	transform: scale(1.1);
+	transition: transform 0.5s;
+}
 .myHeaderText{font-family: Lobster;}
 .myHeaderText:after{
 	content: "Jenny";
