--- a/twitchtv.html
+++ b/twitchtv.html
@@ -17,9 +17,13 @@ body{
   color: inherit;
 }
 #twitch{
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
   margin: 0px auto;
   width: 320px;
-  height: 451px;
+  height: 455px;
   background: white;
   overflow-x: hidden;
 }
