add mobile responsive setting

--- a/pomodoro.html
+++ b/pomodoro.html
@@ -90,7 +90,10 @@ h1{
 #break-time-left, #session-time-left{
   top: 100px;
 }
-
+@media all and (max-width: 768px){
+  #pomodoro{width: 320px; height: fit-content;}
+  #break-set{width: 138px;}
+}
 </style>
 </head>
 <body>
