revise mobile responsive setting

--- a/pomodoro.html
+++ b/pomodoro.html
@@ -91,8 +91,14 @@ h1{
   top: 100px;
 }
 @media all and (max-width: 768px){
-  #pomodoro{width: 320px; height: fit-content;}
-  #break-set{width: 138px;}
+  #pomodoro{margin-top: 0px; width: 320px; height: fit-content;}
+  #upper{
+    height: 74px; text-align: center;
+  }
+  #break-set, #session-set{width: 116px; margin-top: 0px;}
+  #break-less, #break-time, #break-more, #session-less, #session-time, #session-more{
+    margin-top: 0px;
+  }
 }
 </style>
 </head>
