--- a/pomodoro.html
+++ b/pomodoro.html
@@ -57,6 +57,7 @@ h1{
   height: 250px;
   border: 2px solid #CEFFCE;
   border-radius: 150px;
+  z-index: 10;
 }
 #break-timer-inner, #session-timer-inner{
   position: absolute;
