--- a/pomodoro.html
+++ b/pomodoro.html
@@ -66,6 +66,7 @@ h1{
   border-radius: 150px;
   overflow: hidden;
   cursor: pointer;
+  z-index: 11;
 }
 #break-timer-inner{
   background: #ff7575;
@@ -77,6 +78,7 @@ h1{
   width: 250px;
   height: 250px;
   background: #003E3E;
+  z-index: 9;
 }
 #break-txt, #break-time-left, #session-txt, #session-time-left{
   position: absolute;
