change css again

--- a/pomodoro.html
+++ b/pomodoro.html
@@ -96,7 +96,7 @@ h1{
     height: 74px; text-align: center;
   }
   #break-timer, #session-timer{
-    margin: 0px;
+    margin: 0px solid #CEFFCE;
   }
   #break-timer-outer, #session-timer-outer{
     border: 5px;
