change css again

--- a/pomodoro.html
+++ b/pomodoro.html
@@ -96,10 +96,10 @@ h1{
     height: 74px; text-align: center;
   }
   #break-timer, #session-timer{
-    margin: 0px solid #CEFFCE;
+    margin: 0px;
   }
   #break-timer-outer, #session-timer-outer{
-    border: 5px;
+    border: 5px solid #CEFFCE;
   }
   #break-set, #session-set{width: 116px; margin-top: 0px;}
   #break-less, #break-time, #break-more, #session-less, #session-time, #session-more{
