change height using original JS

--- a/pomodoro.html
+++ b/pomodoro.html
@@ -175,7 +175,9 @@ function breakCount(){
     }
     breakLeft--;
     var heightLeft = 250 * breakLeft / ($("#break-time").html() * 60);
-    $("#break-progress").css("height",heightLeft);
+    var breakProgress = document.getElementById("break-progress");
+    breakProgress.style.height = heightLeft + "px";
+    // $("#break-progress").css("height",heightLeft);
     breakTimer = setTimeout(breakCount,1000);
   }else{
     $("#break-timer").css("display", "none");
@@ -204,7 +206,9 @@ function sessionCount(){
     }
     sessionLeft--;
     var heightLeft = 250 * sessionLeft / ($("#session-time").html() * 60);
-    $("#session-progress").css("height",heightLeft);
+    var sessionProgress = document.getElementById("session-progress");
+    sessionProgress.style.height = heightLeft + "px";
+    // $("#session-progress").css("height",heightLeft);
     sessionTimer = setTimeout(sessionCount,1000);
   }else{
     $("#break-timer").css("display", "block");
