--- a/pomodoro.html
+++ b/pomodoro.html
@@ -136,7 +136,9 @@ h1{
     <div id="break-timer">
       <div id="break-timer-outer">
         <div id="break-timer-inner">
-          <div id="break-progress"></div>
+          <div id="break-middle">
+            <div id="break-progress"></div>
+          </div>
           <div id="break-txt">Break!</div>
           <div id="break-time-left">5:00</div>
         </div>
@@ -145,7 +147,9 @@ h1{
     <div id="session-timer">
       <div id="session-timer-outer">
         <div id="session-timer-inner">
-          <div id="session-progress"></div>
+          <div id="session-middle">
+            <div id="session-progress"></div>
+          </div>
           <div id="session-txt">Session</div>
           <div id="session-time-left">25:00</div>
         </div>
