--- a/pomodoro.html
+++ b/pomodoro.html
@@ -73,6 +73,10 @@ h1{
 #session-timer-inner{
   background: #CEFFCE;
 }
+#break-middle, #session-middle{
+  border-radius: 150px;
+  overflow: hidden;
+}
 #break-progress, #session-progress{
   width: 250px;
   height: 250px;
