--- a/pomodoro.html
+++ b/pomodoro.html
@@ -65,6 +65,7 @@ h1{
   width: 250px;
   height: 250px;
   border-radius: 150px;
+  -webkit-transform:rotate(0deg);
   cursor: pointer;
 }
 #break-timer-inner{
@@ -72,10 +73,6 @@ h1{
 }
 #session-timer-inner{
   background: #CEFFCE;
-}
-#break-middle, #session-middle{
-  border-radius: 150px;
-  overflow: hidden;
 }
 #break-progress, #session-progress{
   width: 250px;
@@ -140,9 +137,7 @@ h1{
     <div id="break-timer">
       <div id="break-timer-outer">
         <div id="break-timer-inner">
-          <div id="break-middle">
-            <div id="break-progress"></div>
-          </div>
+          <div id="break-progress"></div>
           <div id="break-txt">Break!</div>
           <div id="break-time-left">5:00</div>
         </div>
@@ -151,9 +146,7 @@ h1{
     <div id="session-timer">
       <div id="session-timer-outer">
         <div id="session-timer-inner">
-          <div id="session-middle">
-            <div id="session-progress"></div>
-          </div>
+          <div id="session-progress"></div>
           <div id="session-txt">Session</div>
           <div id="session-time-left">25:00</div>
         </div>
