--- a/pomodoro.html
+++ b/pomodoro.html
@@ -65,6 +65,7 @@ h1{
   width: 250px;
   height: 250px;
   border-radius: 150px;
+  -webkit-appearance : none;
   -webkit-transform:rotate(0deg);
   cursor: pointer;
 }
