--- a/pomodoro.html
+++ b/pomodoro.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <title>plain text to HTML code tool</title>
+  <title>Pomodoro Clock</title>
   <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
   <style>
   html{width: 100%; height: 100%;}
