--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="topstyles.css">
 	<link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
-<title>Jenny's blog</title>
+<title>Jenny's ressume</title>
 </head>
 
 <style>
