--- a/wikipage.html
+++ b/wikipage.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0"
       http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Jenny's blog</title>
+<title>Wikipedia Viewer</title>
 
 <style>
 body{margin: 0px; background: #003333; text-align: center; min-width: 320px;}
