--- a/minesweeper.html
+++ b/minesweeper.html
@@ -8,24 +8,30 @@
     <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta name="format-detection" content="telephone=no" />
     <style>
-      html,body{
-      -webkit-tap-highlight-color:transparent ;
-      -webkit-user-select:none ;
+      html{
+      font-size: 16px;
       }
       body{
+      -webkit-user-select: none;
+      user-select: none;
       margin: 0px;
-      width: 320px; max-width: 320px; margin: 0px auto;
-      }
-      .outer{
-      position: relative;
-      margin: 0px;
-      padding: 4px;
-      width: 300px;
-      height: 450px;
+      width: 100%;
+      min-width: 320px;
       background-color: rgb(192, 192, 192);
       }
+      .outer{
+      position: fixed;
+      margin: 0px auto;
+      top: 0px;
+      left: 0px;
+      right: 0px;
+      padding: 0.25rem;
+      width: 18.75rem;
+      height: 28.125rem;
+      /*background-color: rgb(192, 192, 192);*/
+      }
       #mineField{
-      margin: 8px auto 16px auto; border: 2px solid;
+      margin: 0.5rem auto 1rem auto; border: 0.125rem solid;
       border-left-color: rgb(128, 128, 128);
       border-top-color: rgb(128, 128, 128);
       border-bottom-color: white;
@@ -34,18 +40,18 @@
       }
       #mineField td{
       position: relative;
-      width: 22px; max-width: 22px; height: 22px;
+      width: 1.375rem; height: 1.375rem;
       background-color: rgb(192, 192, 192); 
       }
       .cleared{
-      border: 2px solid;
+      border: 0.125rem solid;
       border-left-color: rgb(128, 128, 128);
       border-top-color: rgb(128, 128, 128);
       border-bottom-color: white;
       border-right-color: white;
       }
       .untouched{
-      border: 2px solid;
+      border: 0.125rem solid;
       border-left-color: white;
       border-top-color: white;
       border-right-color: rgb(128, 128, 128);
@@ -54,7 +60,7 @@
       }
       .btnOuter{
       display: inline-block;
-      border: 2px solid;
+      border: 0.125rem solid;
       width: fit-content;
       border-left-color: white;
       border-top-color: white;
@@ -62,8 +68,8 @@
       border-right-color: rgb(128, 128, 128);
       }
       .btnInner{
-      border: 2px solid;
-      height: 22px;
+      border: 0.125rem solid;
+      height: 1.375rem;
       border-left-color: white;
       border-top-color: white;
       border-right-color: rgb(128, 128, 128);
@@ -71,94 +77,94 @@
       cursor: pointer;
       }
       #noMineOuter{
-      margin: 0px auto auto 23px;
+      margin: 0px auto auto 1.4375rem;
       }
       #newMineOuter, #flagOuter, .counterOuter{
-      margin: 0px auto auto 12px;
+      margin: 0px auto auto 0.75rem;
       }
       .counterOuter{
       display: inline-block;
       background-color: black;
       color: red;
-      border: 2px solid rgb(90, 84, 84);
+      border: 0.125rem solid rgb(90, 84, 84);
       width: fit-content;
       }
       .counterInner{
-      padding-right: 5px;
+      padding-right: 0.3125rem;
       text-align: right;
       }
       #newMine, #newFlag, .counterInner{
       position: relative;
-      width: 22px;
+      width: 1.375rem;
       }
       #newFlag{cursor: pointer;}
       .faceOuter{
       position: absolute;
-      top: .5px;
-      left: 1px;
-      width: 20px;
-      height: 20px;
-      border-radius: 20px;
+      top: 0.03125rem;
+      left: 0.0625rem;
+      width: 1.25rem;
+      height: 1.25rem;
+      border-radius: 1.25rem;
       background-color: yellow;
       }
       .eyeLeft{
       position: absolute;
-      top: 5px;
-      left: 6px;
-      width: 2px;
-      height: 2px;
-      border-radius: 2px;
+      top: 0.3125rem;
+      left: 0.375rem;
+      width: 0.125rem;
+      height: 0.125rem;
+      border-radius: 0.125rem;
       background-color: black;
       }
       .eyeRight{
       position: absolute;
-      top: 5px;
-      left: 12px;
-      width: 2px;
-      height: 2px;
-      border-radius: 2px;
+      top: 0.3125rem;
+      left: 0.75rem;
+      width: 0.125rem;
+      height: 0.125rem;
+      border-radius: 0.125rem;
       background-color: black;
       }
       .smileLips{
       position: absolute;
-      top: 5px;
-      left: 5px;
-      width: 10px;
-      height: 10px;
-      border-bottom: 2px solid black;
-      border-bottom-left-radius: 10px;
-      border-bottom-right-radius: 10px;
+      top: 0.3125rem;
+      left: 0.3125rem;
+      width: 0.625rem;
+      height: 0.625rem;
+      border-bottom: 0.125rem solid black;
+      border-bottom-left-radius: 0.625rem;
+      border-bottom-right-radius: 0.625rem;
       }
       .flag{
       position: absolute;
-      top: 2px; left: 3px;
+      top: 0.125rem; left: 0.1875rem;
       width: 0; 
       height: 0; 
-      border-top: 5px solid transparent; 
-      border-right: 10px solid red; 
-      border-bottom: 5px solid transparent;
+      border-top: 0.3125rem solid transparent; 
+      border-right: 0.625rem solid red; 
+      border-bottom: 0.3125rem solid transparent;
       }
       .pole{
       position: absolute;
       margin: 0px; padding: 0px;
       border: none;
-      top: 2.5px; left: 12px;
-      width: 2px; height: 16px;
+      top: 0.15625rem; left: 0.75rem;
+      width: 0.125rem; height: 1rem;
       background-color: black;
       }
       .stand{
       position: absolute;
       margin: 0px; padding: 0px;
       border: none;
-      top: 17px; left: 5px;
-      width: 13px; height: 2px;
+      top: 1.0625rem; left: 0.3125rem;
+      width: 0.8125rem; height: 0.125rem;
       background-color: black;
       }
       .mineNumber{
       color: black;
-      width: 22px; height: 22px;
+      width: 1.375rem; height: 1.375rem;
       padding: 0px; margin: 0px;
-      text-align: center; line-height: 22px;
+      text-align: center; line-height: 1.375rem;
       font-weight: bold; overflow: hidden;
       display: block;
       }
@@ -340,6 +346,30 @@
     <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script> -->
     <!-- <script src='minesweeper.js'></script> -->
     <script>
+      /*移动设备适配，只有用了rem才会生效*/
+      /*原作者地址https://blog.csdn.net/qq20004604/article/details/67071008*/
+      var fun = function (doc, win) {
+        var docEl = doc.documentElement,
+            resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+            recalc = function () {
+                var clientWidth = docEl.clientWidth;
+                if (!clientWidth) return;
+                //屏幕大于等于768时需要保持固定宽度和比例
+                if(clientWidth >= 768){
+                  docEl.style.fontSize = 1.5 * 16 + 'px';
+                }else{
+                  //屏幕小于768时可以缩放
+                  //html根元素font-size为16，设计稿宽度为320，因为我是以适配iPhone SE为目的设计的
+                  docEl.style.fontSize = 16 * (clientWidth / 320) + 'px';
+                }
+            };
+        if (!doc.addEventListener) return;
+        win.addEventListener(resizeEvt, recalc, false);
+        doc.addEventListener('DOMContentLoaded', recalc, false);
+      }
+      fun(document, window);
+      /*移动设备适配结束*/
+
     var lastTouchEnd = 0;
     document.documentElement.addEventListener('touchend', function (event) {
       var now = Date.now();
